--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 
     
    <!-- <script src="assets/js/app.js"></script> -->
-    <script src="assets/js/IfElse.js"></script>
+    <script src="assets/js/ciclos/for.js"></script>
 </body>
 </html>
